--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
 dev_dependencies:
   benchmark_harness: ">=1.0.0 <2.0.0"
   test: ^1.2.0
+  ml_tech: ^0.0.2
   mockito: ^3.0.0
   build_runner: ^1.1.2
   build_test: ^0.10.2
-  pedantic: 1.1.0
