--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ author: Ilia Gyrdymov <ilgyrd@gmail.com>
 homepage: https://github.com/gyrdym/ml_dataframe
 
 environment:
-  sdk: '>=2.3.0 <3.0.0'
+  sdk: '>=2.4.0 <3.0.0'
 
 dependencies:
   csv: ^4.0.0
@@ -16,7 +16,10 @@ dependencies:
 dev_dependencies:
   benchmark_harness: ">=1.0.0 <2.0.0"
   test: ^1.2.0
-  ml_tech: ^0.0.2
+  ml_tech: ^0.0.3
   mockito: ^3.0.0
   build_runner: ^1.1.2
   build_test: ^0.10.2
+  coverage: ^0.13.2
+  grinder: ^0.8.3
+  grinder_coveralls: ^1.1.1
