travis config:  directive removed

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,9 @@
-include: package:ml_tech/travis_options.yaml
+language: dart
+dart:
+  - "2.4.1"
+install: pub get
+dart_task:
+  - dartanalyzer: true
+  - dartfmt: true
+script: pub run grinder test
+after_success: pub run grinder uploadCoverage
