--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: dart
 dart:
   - "2.4.1"
 install: pub get
-dart_task:
-  - dartanalyzer: true
-  - dartfmt: true
+#dart_task:
+#  - dartanalyzer: true
+#  - dartfmt: true
 script: pub run grinder test
 after_success: pub run grinder uploadCoverage
