--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: ml_dataframe
-description: Dataframe - a way to store and effectively manipulate data
-version: 0.0.4
+description: Dataframe - a way to store and manipulate data
+version: 0.0.5
 author: Ilia Gyrdymov <ilgyrd@gmail.com>
 homepage: https://github.com/gyrdym/ml_dataframe
 
