--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: ml_dataframe
 description: Dataframe - a way to store and manipulate data
-version: 0.0.6
+version: 0.0.7
 author: Ilia Gyrdymov <ilgyrd@gmail.com>
 homepage: https://github.com/gyrdym/ml_dataframe
 
@@ -11,7 +11,7 @@ dependencies:
   csv: ^4.0.0
   ml_linalg: ^11.0.0
   quiver: ^2.0.2
-  xrange: ^0.0.6
+  xrange: 0.0.6
 
 dev_dependencies:
   benchmark_harness: '>=1.0.0 <2.0.0'
