--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,15 @@
 name: ml_dataframe
 description: Dataframe - a way to store and manipulate data
-version: 0.0.11
+version: 0.0.12
 author: Ilia Gyrdymov <ilgyrd@gmail.com>
 homepage: https://github.com/gyrdym/ml_dataframe
 
 environment:
-  sdk: '>=2.2.0 <3.0.0'
+  sdk: '>=2.7.0 <3.0.0'
 
 dependencies:
   csv: ^4.0.0
+  json_serializable: ^3.3.0
   ml_linalg: ^12.0.2
   quiver: ^2.0.2
 
