--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,6 @@
 name: ml_dataframe
 description: Dataframe - a way to store and manipulate data
 version: 0.1.0
-author: Ilia Gyrdymov <ilgyrd@gmail.com>
 homepage: https://github.com/gyrdym/ml_dataframe
 
 environment:
@@ -9,6 +8,7 @@ environment:
 
 dependencies:
   csv: ^4.0.0
+  json_annotation: ^3.0.1
   json_serializable: ^3.3.0
   ml_linalg: ^12.0.2
   quiver: ^2.0.2
