--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,23 +1,23 @@
 name: ml_dataframe
 description: Dataframe - a way to store and manipulate data
-version: 0.2.0
+version: 0.3.0
 homepage: https://github.com/gyrdym/ml_dataframe
 
 environment:
-  sdk: '>=2.7.0 <3.0.0'
+  sdk: '>=2.10.0 <3.0.0'
 
 dependencies:
   csv: ^4.0.0
   json_annotation: ^3.0.1
   json_serializable: ^3.3.0
-  ml_linalg: ^12.0.2
+  ml_linalg: ^12.17.4
   quiver: ^2.0.2
 
 dev_dependencies:
   benchmark_harness: '>=1.0.0 <2.0.0'
   build_runner: ^1.1.2
   build_test: ^0.10.2
-  grinder: ^0.8.3
-  ml_tech: ^0.0.5
   mockito: ^3.0.0
+  pedantic: ^1.9.2
+  test_coverage: ^0.5.0
   test: ^1.2.0
