--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     container:
-      image:  google/dart:latest
+      image:  google/dart:beta
 
     steps:
       - uses: actions/checkout@v2
@@ -27,11 +27,3 @@ jobs:
 
       - name: Run tests
         run: dart test
-
-      - name: Code coverage
-        run: dart pub run test_coverage
-
-      - name: Coveralls GitHub Action
-        uses: coverallsapp/github-action@v1.1.2
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
