--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,22 +1,21 @@
 name: ml_dataframe
 description: Dataframe - a way to store and manipulate data
-version: 0.4.1
+version: 0.5.0-nullsafety.0
 homepage: https://github.com/gyrdym/ml_dataframe
 
 environment:
-  sdk: '>=2.10.0 <3.0.0'
+  sdk: '>=2.12.0-0 <3.0.0'
 
 dependencies:
-  csv: ^4.0.0
-  json_annotation: ^3.0.1
-  json_serializable: ^3.3.0
-  ml_linalg: ^12.17.4
-  quiver: ^2.0.2
+  csv: ^5.0.0-nullsafety.0
+  json_annotation: ^4.0.0-nullsafety.0
+  json_serializable: ^4.0.0-nullsafety.0
+  ml_linalg: ^13.0.0-nullsafety.0
+  quiver: ^3.0.0-nullsafety.3
 
 dev_dependencies:
-  benchmark_harness: '>=1.0.0 <2.0.0'
-  build_runner: ^1.1.2
-  mockito: ^3.0.0
-  pedantic: ^1.9.2
-  test_coverage: ^0.5.0
-  test: ^1.2.0
+  benchmark_harness: ^2.0.0-nullsafety.0
+  build_runner: ^1.10.11
+  mockito: ^5.0.0-nullsafety.5
+  pedantic: ^1.10.0-nullsafety.3
+  test: ^1.16.0-nullsafety.17
