--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: ml_dataframe
 description: Dataframe - a way to store and manipulate data
-version: 0.5.1
+version: 0.6.0
 homepage: https://github.com/gyrdym/ml_dataframe
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   csv: ^5.0.0
