--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,1 +1,14 @@
 include: package:pedantic/analysis_options.yaml
+
+analyzer:
+  strong-mode:
+    implicit-casts: false
+    implicit-dynamic: true
+  errors:
+    unnecessary_import: error
+    unnecessary_type_check: error
+    missing_return: error
+    dead_code: error
+    duplicate_import: error
+    unused_import: error
+    deprecated_member_use_from_same_package: warning
