--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: ml_dataframe
-description: Dataframe - a way to store and manipulate data
-version: 1.3.0
+description: An in-memory untyped data storage with the possibility to query and modify it
+version: 1.4.0
 homepage: https://github.com/gyrdym/ml_dataframe
 
 environment:
