--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     container:
-      image:  google/dart:beta
+      image:  google/dart:latest
 
     steps:
       - uses: actions/checkout@v2
@@ -22,8 +22,11 @@ jobs:
       - name: Install dependencies
         run: dart pub get
 
+      - name: Verify formatting
+        run: dart format --output=none --set-exit-if-changed .
+
       - name: Analyze project source
-        run: dart analyze --fatal-infos
+        run: dart analyze --no-fatal-warnings
 
       - name: Run tests
         run: dart test
